# ONNX-parser

./: CMakeLists.txt  README.md  convolution.onnx  convolution.py  main.cpp  maxpooling.onnx  maxpooling.py  onnx.pb.cc  onnx.pb.h
scripts/: LRN.py  alexnet.py  convolution.py  generate_models.py  linear.py  maxpooling.py  two_maxpool_layer.py
